force-app/main/default/objects/Item_Master_Subscription_Link__c/fields/Item_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Name__c</fullName>
    <formula>Item_Master_Product__r.Item_Name__c</formula>
    <label>Item Master Name</label>
    <type>Text</type>
</CustomField>