force-app/main/default/objects/Item_Master_Subscription_Link__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Product Customer</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Item Master Subscription Links</relationshipLabel>
    <relationshipName>Product_Master_to_Product_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>